--- a/style.css
+++ b/style.css
@@ -1,101 +1,17 @@
-/* video Css */
+/* general css */
 
-.thumbnail {
-    width: 100%;
-}
-
-
-
-.video-title {
-    margin-top: 0px;
-    font-size: 14px;
-    font-weight: 550;
-    line-height: 20px;
-    margin-bottom: 10px;
-}
-
-.video-info-grid {
-    display: grid;
-    grid-template-columns: 50px 1fr;
-}
-
-
-.profile-picture {
-    width: 36px;
-    border-radius: 50px;
-}
-
-.thumbnail-row {
-    margin-bottom: 8px;
-    position: relative;
-}
-
-.video-author,
-.video-stats {
-    font-size: 12px;
-    color: rgb(96, 96, 96);
-}
-
-.video-author {
-    margin-bottom: 4px;
-}
-
-.video-stats {
+p {
     margin-top: 0;
+    margin-bottom: 0;
 }
 
-.video-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 16px;
-    row-gap: 40px;
-}
-
-.video-time {
+body {
     font-family: Roboto, Arial;
-    font-size: 12px;
-    font-weight: 600;
-    padding: 4px 4px;
-    border-radius: 2px;
-    background-color: black;
-    color: white;
-    position: absolute;
-    bottom: 8px;
-    right: 5px;
-}
-
-/* sidebar css */
-.sidebar {
-    z-index: 200;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    top: 55px;
-    width: 72px;
-    padding-top: 5px;
-}
-
-.sidebar-link {
-    height: 74px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    cursor: pointer;
-}
-
-.sidebar-link:hover {
-    background-color: rgb(235, 235, 235);
-}
-
-.sidebar-link img {
-    height: 24px;
-    margin-bottom: 4px;
-}
-
-.sidebar-link div {
-    font-family: Roboto, Arial;
-    font-size: 10px;
+    margin: 0;
+    padding-top: 80px;
+    padding-left: 96px;
+    padding-right: 24px;
+    background-color: rgb(248, 248, 248);
 }
 
 /* header css */
@@ -146,9 +62,7 @@
     height: 36px;
     padding-left: 10px;
     font-size: 16px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(192, 192, 192);
+    border: 1px solid rgb(192, 192, 192);
     border-radius: 2px;
     box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.05);
     width: 0;
@@ -172,7 +86,9 @@
 
 .search-button,
 .voice-search-button,
-.upload-icon-container {
+.upload-icon-container,
+.youtube-apps-icon-container,
+.notifications-icon-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -181,7 +97,9 @@
 
 .search-button .tooltip,
 .voice-search-button .tooltip,
-.upload-icon-container .tooltip {
+.upload-icon-container .tooltip,
+.youtube-apps-icon-container .tooltip,
+.notifications-icon-container .tooltip {
     font-family: Roboto, Arial;
     position: absolute;
     background-color: gray;
@@ -198,7 +116,9 @@
 
 .search-button:hover .tooltip,
 .voice-search-button:hover .tooltip,
-.upload-icon-container:hover .tooltip {
+.upload-icon-container:hover .tooltip,
+.youtube-apps-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip {
     opacity: 1;
 }
 
@@ -259,18 +179,121 @@
     border-radius: 16px;
 }
 
-/* general css */
+/* video Css */
 
-p {
-    font-family: Roboto, Arial;
-    margin-top: 0;
-    margin-bottom: 0;
+.thumbnail {
+    width: 100%;
 }
 
-body {
-    margin: 0;
-    padding-top: 80px;
-    padding-left: 96px;
-    padding-right: 24px;
-    background-color: rgb(250, 250, 250);
+
+
+.video-title {
+    margin-top: 0px;
+    font-size: 14px;
+    font-weight: 550;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+
+.video-info-grid {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+}
+
+
+.profile-picture {
+    width: 36px;
+    border-radius: 50px;
+}
+
+.thumbnail-row {
+    margin-bottom: 8px;
+    position: relative;
+}
+
+.video-author,
+.video-stats {
+    font-size: 12px;
+    color: rgb(96, 96, 96);
+}
+
+.video-author {
+    margin-bottom: 4px;
+}
+
+.video-stats {
+    margin-top: 0;
+}
+
+.video-grid {
+    font-family: Roboto, Arial;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 16px;
+    row-gap: 40px;
+}
+
+@media (max-width:750px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 751px) and (max-width: 999px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1000px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+.video-time {
+    font-size: 12px;
+    font-weight: 600;
+    padding: 4px;
+    border-radius: 2px;
+    background-color: black;
+    color: white;
+    position: absolute;
+    bottom: 8px;
+    right: 5px;
+}
+
+/* sidebar css */
+.sidebar {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    top: 55px;
+    background-color: white;
+    width: 72px;
+    padding-top: 5px;
+    z-index: 200;
+}
+
+.sidebar-link {
+    height: 74px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.sidebar-link:hover {
+    background-color: rgb(235, 235, 235);
+}
+
+.sidebar-link img {
+    height: 24px;
+    margin-bottom: 4px;
+}
+
+.sidebar-link div {
+    font-family: Roboto, Arial;
+    font-size: 10px;
 }
